force-app/main/default/objects/Bed_Allocation__c/Bed_Allocation__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Bed Allocation.</description>
    <label>Bed Allocation</label>
    <nameField>
        <displayFormat>BEDALLOC-{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bed Allocations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>