force-app/main/default/objects/Bed_Allocation__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Bed Allocations</relationshipLabel>
    <relationshipName>Bed_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>