force-app/main/default/objects/Bed_Allocation__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed</label>
    <referenceTo>Bed__c</referenceTo>
    <relationshipLabel>Bed Allocations</relationshipLabel>
    <relationshipName>Bed_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>