force-app/main/default/objects/Bed_Allocation__c/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <label>Bed Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>