force-app/main/default/objects/Bed_Allocation__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>