force-app/main/default/objects/Bed_Allocation__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>Discharge Date Time</label>
    <type>DateTime</type>
</CustomField>