force-app/main/default/objects/Bed_Allocation__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Bed Allocations</relationshipLabel>
    <relationshipName>Bed_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>