force-app/main/default/objects/Bed_Allocation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Bed Allocations</relationshipLabel>
    <relationshipName>Bed_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>