force-app/main/default/objects/Bed_Allocation__c/validationRules/Bed_Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bed_Price_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Daily_Rate__c )</errorConditionFormula>
    <errorDisplayField>Daily_Rate__c</errorDisplayField>
    <errorMessage>Daily Rate is fixed</errorMessage>
</ValidationRule>