force-app/main/default/objects/Bed_Allocation__c/validationRules/date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>date_validation</fullName>
    <active>true</active>
    <description>end date should always greater or equal to start date</description>
    <errorConditionFormula>End_Date_Time__c &lt;= Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>end date cant be before start date</errorMessage>
</ValidationRule>